# jiralog

./: .env.example  .gitignore  CLAUDE.md  README.md  jiralog.py  pyproject.toml
.serena/: project.yml
.serena/memories/: user_preferences.md
jiralog/: cli.py  config.py  jira.py  processor.py  report.py
tests/: test_processor.py
